
= openwferu-densha CHANGELOG.txt


== densha - 0.9.18    not yet released

- todo  #19065 : upgraded to Rails 2.0.2 (should be OK with 1.2.6) - s1632


== densha - 0.9.17    released 2007/03/17

- todo  #18794 : implemented special user store (inbox) - s1612
- todo  #18717 : implemented download/upload of exps as yaml - s1602
- todo  #18659 : turned densha-workitem into densha-hash and integrated
                 it into /process/edit - s1584
- todo  #18648 : adapted search to special 'users' store - s1574
- todo  #18642 : eadmin --> processes, wadmin --> worklist, ... - s1573
- bug   #18636 : broken " and ' handling in workitem edition. Fixed - s1567
- todo  #18633 : added :gem_install_workflow_engine rake task - s1566
- todo  #18471 : implemented first iteration of 'process gardening' - s1553
- todo  #16684 : ordering processes by launchtime in /eadmin - s1546
- todo  #16368 : implemented batch ops in /eadmin - s1544
- todo  #16814 : 'abort' instead of 'cancel' in /eadmin - s1543
- todo  #18468 : added process definition upload to /wadmin - s1543
- todo  #17950 : added :install_workflow_engine rake task - s1501
- todo  #16734 : better error message when launchp references inexistent
                 proc definition - s1409 (first OpenWFEru commit of year 2008)
- todo  #16369 : now displaying process status tags in /eadmin - s1386
- bug   #15786 : fixed edit/view loop - s1295
- todo  #15787 : reorganized the workitem edit/view system - s1283
- todo  #15784 : implemented "launch and follow" - s1281


== densha - 0.9.16    released 2007/11/19

- patch #15496 : missing passwd in worklist admin. Patched by Amedeo - s1243
- patch #15497 : 'launch this process' link fixed by Amedeo Paglione - s1242
- todo  #13883 : added workitem search system.
- bug   #15448 : store participant administration broken. Fixed - s1236
- todo  #15432 : upgraded to prototype 1.6.0 - s1234
- todo  #15280 : added 'participant' and 'upon' params for activity feed - s1231